# solid_template

./: CHANGELOG.md  README.md  pyproject.toml  temp_config.yaml
database/: README.md  build.sh  pyproject.toml
database/scripts/: alembic.sh  common_funcs.sh  run_local_db.sh
database/solidapp_database/: alembic.ini
database/solidapp_database/alembic/: env.py
database/solidapp_database/alembic/versions/: 46edd80075b0_db_initialization.py
database/solidapp_database/database/: __init__.py  database.py  db_config.py  db_config.yaml  db_session.py  service_object.py  test_database_init.py
domain/: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.sh  pyproject.toml  update_version.py
domain/domain/: build.sh  pyproject.toml
domain/domainold/common/dataclass/: person.py
domain/domainold/feature1/dataclass/: survey.py
domain/domainold/feature1/tests/: test_dataclass.py
domain/solidapp_domain/: config.py  domain_config.yaml
domain/solidapp_domain/common/dataclass/: person.py
domain/solidapp_domain/feature1/dataclass/: survey.py
domain/solidapp_domain/feature1/tests/: test_dataclass.py
